@@ -1,5 +1,7 @@
 Revision history for HTML-Latemp-GenMakeHelpers
 
+    - Get rid of trailing space in the output.
+
 0.2.0    Thu Dec 18 08:26:19 IST 2008
     - Changed the GNU make rules from "::" to ":".
     - Now filtering out the 'common' host directories from the directories
